--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,8 +15,8 @@
           </ng-container>
         </ul>
 
-        <div *ngIf="currentUser$ | async" class="dropdown" dropdown>
-          <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+        <div *ngIf="(currentUser$ | async) as user" class="dropdown" dropdown>
+          <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
@@ -27,7 +27,7 @@
         <form *ngIf="(currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
           <input name="username" [(ngModel)]="model.username" class="form-control mr-2" type="text" placeholder="Username">
           <input name="password" [(ngModel)]="model.password" class="form-control mr-2" type="password" placeholder="Password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-primary" type="submit">Login</button>
         </form>
     </div>
   </nav>
