--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,8 +3,8 @@
         <h1>Find your match</h1>
         <p class="lead">Come on in to view your matches... all you need to do is sign up!</p>
         <div class="text-center">
-            <button class="btn btn-secondary btn-lg mr-2" (click)="registerToggle()">Register</button>
-            <button class="btn btn-warning btn-lg">Learn more</button>
+            <button class="btn btn-outline-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
+            <button class="btn btn-outline-warning btn-lg">Learn more</button>
         </div>
     </div>
 
