--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,7 +19,8 @@
         </ul>
 
         <div *ngIf="(currentUser$ | async) as user" class="dropdown" dropdown>
-          <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username}}</a>
+          <img src="{{user.photoUrl}}" alt="{{user.username}}">
+          <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.username}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a>
             <div class="dropdown-divider"></div>
