--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <p class="lead">Come on in to view your matches... all you need to do is sign up!</p>
         <div class="text-center">
             <button class="btn btn-outline-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
-            <button class="btn btn-outline-warning btn-lg">Learn more</button>
+            <button class="btn btn-outline-secondary btn-lg">Learn more</button>
         </div>
     </div>
 
