<Added HttpDelete method to delete a photo>

--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -2,8 +2,13 @@
     <div class="col-2" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
         <div class="text-center">
-            <button class="btn btn-sm mr-2" [disabled]="photo.isMain" (click)="setMainPhoto(photo)" [ngClass]='photo.isMain ? "btn-primary active" : "btn-outline-primary"'>Main</button>
-            <button class="btn btn-sm btn-secondary"><i class="fa fa-trash"></i></button>
+            <button class="btn btn-sm mr-2" 
+            [disabled]="photo.isMain" (click)="setMainPhoto(photo)" [ngClass]='photo.isMain ? "btn-primary active" : "btn-outline-primary"'>
+                Main
+            </button>
+            <button class="btn btn-sm btn-secondary" [disabled]="photo.isMain" (click)="deletePhoto(photo.id)">
+                <i class="fa fa-trash"></i>
+            </button>
         </div>
     </div>
 </div>
