--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -17,9 +17,8 @@
             <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
           </li>
         </ul>
-
         <div *ngIf="(currentUser$ | async) as user" class="dropdown" dropdown>
-          <img src="{{user.photoUrl}}" alt="{{user.username}}">
+          <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
           <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.username}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a>
