--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplte="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplte="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="form-group">
@@ -14,11 +14,17 @@
     <app-text-input [formControl]='registerForm.controls["country"]' [label]='"Country"'></app-text-input>
     <app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]='"password"'></app-text-input>
     <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm Password"' [type]='"password"'></app-text-input>
+    
+    <div class="row" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
+    </div>
+    
     <div class="form-group text-center">
-        <button class="btn btn-outline-success mr-2" type="submit">Register</button>
+        <button [disabled]='!registerForm.valid' class="btn btn-outline-success mr-2" type="submit">Register</button>
         <button class="btn btn-outline-secondary mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
-
-<p>Form Value: {{registerForm.value | json}}</p>
-<p>Form Value: {{registerForm.status | json}}</p>
