--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -24,6 +24,26 @@
 
         <button class="btn btn-outline-primary ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-outline-secondary ml-1" type="submit">Reset Filters</button>
+
+        <div class="col">
+            <div class="btn-group float-right">
+                <button
+                    type="button"
+                    class="btn btn-outline-primary"
+                    btnRadio='lastActive'
+                    name='orderBy'
+                    [(ngModel)]="userParams.orderBy" 
+                    (click)="loadMembers()">Last Active</button>
+    
+                <button
+                    type="button"
+                    class="btn btn-outline-primary"
+                    btnRadio='created'
+                    name='orderBy'
+                    [(ngModel)]="userParams.orderBy" 
+                    (click)="loadMembers()">Newest Members</button>
+            </div>
+        </div>
     </form>
 </div>
 
