--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
                 <button class="btn btn-outline-warning" routerLink='/members/{{member.username}}'><i class="fa fa-user"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn btn-outline-secondary"><i class="fa fa-heart"></i></button>
+                <button class="btn btn btn-outline-secondary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
                 <button class="btn btn btn-outline-success"><i class="fa fa-envelope"></i></button>
