<Used query params and route resolver to go to message tab>

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,12 @@
                 <button class="btn btn btn-outline-secondary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn btn-outline-success"><i class="fa fa-envelope"></i></button>
+                <button 
+                    class="btn btn btn-outline-success" 
+                    routerLink='/members/{{member.username}}'
+                    [queryParams]='{tab: 3}'>
+                        <i class="fa fa-envelope"></i>
+                </button>
             </li>
         </ul>
     </div>
