--- a/client/src/app/members/member-details/member-details.component.html
+++ b/client/src/app/members/member-details/member-details.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
     <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
@@ -22,7 +22,7 @@
                 <div class="card-footer">
                     <div class="btn-group d-flex">
                         <button class="btn btn-outline-secondary mr-1">Like</button>
-                        <button class="btn btn-outline-success">Message</button>
+                        <button class="btn btn-outline-success" (click)="selectTab(3)">Message</button>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <tab heading='Photos' (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
-            <tab heading='Message' (selectTab)="onTabActivated($event)">
+            <tab heading='Messages' (selectTab)="onTabActivated($event)">
                 <app-member-messages [messages]="messages"></app-member-messages>
             </tab>
         </tabset>
