--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -24,7 +24,7 @@
             <th style="width: 20%">Sent/ Received</th>
             <th style="width: 20%"></th>
         </tr>
-        <tr *ngFor="let message of messages" 
+        <tr [hidden]="loading" *ngFor="let message of messages" 
             routerLink='{{container === "Outbox" ? "/members/" + message.recipientUsername : "/members/" + message.senderUsername}}'
             [queryParams]='{tab: 3}'>
             <td>{{message.content}}</td>
@@ -46,7 +46,7 @@
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
     <pagination
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
