--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -40,7 +40,7 @@
             </td>
             <td>{{message.messageSent | timeago}}</td>
             <td>
-                <button class="btn btn-outline-secondary">Delete</button>
+                <button class="btn btn-outline-secondary" (click)="deleteMessage(message.id)" (click)="$event.stopPropagation()">Delete</button>
             </td>
         </tr>
     </table>
