--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -30,11 +30,11 @@
             <td>{{message.content}}</td>
             <td>
                 <div *ngIf="container === 'Outbox'">
-                    <img src="{{message.recipientPhotoUrl || './assets.user.png'}}" alt="{{message.recipientUsername}}" class="img-circle rounded-circle mr-2">
+                    <img src="{{message.recipientPhotoUrl || '../assets/user.png'}}" alt="{{message.recipientUsername}}" class="img-circle rounded-circle mr-2">
                     <strong>{{message.recipientUsername | titlecase}}</strong>
                 </div>
                 <div *ngIf="container !== 'Outbox'">
-                    <img src="{{message.senderPhotoUrl || './assets.user.png'}}" alt="{{message.senderUsername}}" class="img-circle rounded-circle mr-2">
+                    <img src="{{message.senderPhotoUrl || '../assets/user.png'}}" alt="{{message.senderUsername}}" class="img-circle rounded-circle mr-2">
                     <strong>{{message.senderUsername | titlecase}}</strong>
                 </div>
             </td>
